--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,7 @@
 
           <ul class="portfolio list">
             <li>
-              <a href="#" class="portfolio-image-item">
+              <a href="#" class="portfolio-image-link">
                 <img
                   class="portfolio-image"
                   src="./images/portfolio_img1.jpg"
@@ -97,7 +97,7 @@
               </a>
             </li>
             <li>
-              <a href="#" class="portfolio-image-item">
+              <a href="#" class="portfolio-image-link">
                 <img
                   class="portfolio-image"
                   src="./images/portfolio_img2.jpg"
@@ -112,7 +112,7 @@
               </a>
             </li>
             <li>
-              <a href="#" class="portfolio-image-item">
+              <a href="#" class="portfolio-image-link">
                 <img
                   class="portfolio-image"
                   src="./images/portfolio_img3.jpg"
@@ -127,7 +127,7 @@
               </a>
             </li>
             <li>
-              <a href="#" class="portfolio-image-item">
+              <a href="#" class="portfolio-image-link">
                 <img
                   class="portfolio-image"
                   src="./images/portfolio_img4.jpg"
@@ -142,7 +142,7 @@
               </a>
             </li>
             <li>
-              <a href="#" class="portfolio-image-item">
+              <a href="#" class="portfolio-image-link">
                 <img
                   class="portfolio-image"
                   src="./images/portfolio_img5.jpg"
@@ -157,7 +157,7 @@
               </a>
             </li>
             <li>
-              <a href="#" class="portfolio-image-item">
+              <a href="#" class="portfolio-image-link">
                 <img
                   class="portfolio-image"
                   src="./images/portfolio_img6.jpg"
@@ -172,7 +172,7 @@
               </a>
             </li>
             <li>
-              <a href="#" class="portfolio-image-item">
+              <a href="#" class="portfolio-image-link">
                 <img
                   class="portfolio-image"
                   src="./images/portfolio_img7.jpg"
@@ -187,7 +187,7 @@
               </a>
             </li>
             <li>
-              <a href="#" class="portfolio-image-item">
+              <a href="#" class="portfolio-image-link">
                 <img
                   class="portfolio-image"
                   src="./images/portfolio_img8.jpg"
@@ -202,7 +202,7 @@
               </a>
             </li>
             <li>
-              <a href="#" class="portfolio-image-item">
+              <a href="#" class="portfolio-image-link">
                 <img
                   class="portfolio-image"
                   src="./images/portfolio_mg9.jpg"
@@ -223,24 +223,25 @@
     <!-- Porfolio Footer -->
     <footer class="footer">
       <section class="container footer-container">
-        <div class="columna-container container">
-          <a href="./index.html" class="footer-logo">
-            <span class="weblogo">WEB</span>STUDIO
-          </a>
+        <div class="footer-container container">
+          <div>
+            <a href="./index.html" class="footer-logo">
+              <span class="weblogo">WEB</span>STUDIO
+            </a>
 
-          <p class="footer-text">
-            Increase the flow of customers and <br />
-            sales for your business with digital <br />
-            marketing & growth solutions.
-          </p>
-        </div>
-        <div class="footer-icons container">
-          <p class="footer-social-text footer-text">Social media</p>
-          <div class="columnb-container footer-social-icon">
-            <ul class="footer-social-list">
-              <li class="footer-social-item list">
+            <p class="footer-social-text">
+              Increase the flow of customers and <br />
+              sales for your business with digital <br />
+              marketing & growth solutions.
+            </p>
+          </div>
+
+          <div class="footer-text-wrapper">
+            <p class="footer-social-text">Social media</p>
+            <ul class="footer-social-list list">
+              <li class="footer-social-item">
                 <a
-                  class="footer--social-link"
+                  class="footer-social-link"
                   href="https://instagram.com"
                   target="_blank"
                   rel="noopener noreferrer"
@@ -251,7 +252,7 @@
                 </a>
               </li>
 
-              <li class="footer-social-item list">
+              <li class="footer-social-item">
                 <a
                   class="footer-social-link"
                   href="https://twitter.com"
@@ -263,7 +264,7 @@
                   </svg>
                 </a>
               </li>
-              <li class="footer-social-item list">
+              <li class="footer-social-item">
                 <a
                   class="footer-social-link"
                   href="https://facebook.com"
@@ -275,7 +276,7 @@
                   </svg>
                 </a>
               </li>
-              <li class="footer-social-item list">
+              <li class="footer-social-item">
                 <a
                   class="footer-social-link"
                   href="https://www.linkedin.com"
